Header z-index fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -11786,7 +11786,7 @@ header#masthead.panel-top {
   position: relative;
 }
 header#masthead.panel-fixed {
-  z-index: 3;
+  z-index: 2;
   position: fixed;
   width: 100%;
   top: 0px;
@@ -12092,7 +12092,7 @@ footer#colophon .footer-bottom .site-info .social-items .link-youtube:hover .fa 
        -o-transition: all 0.8s cubic-bezier(0.68, 0, 0.29, 1);
           transition: all 0.8s cubic-bezier(0.68, 0, 0.29, 1);
   position: relative;
-  z-index: 2;
+  z-index: 1;
   background: white;
   overflow: hidden;
 }
