--- a/src/sass/site/layout/_content.scss
+++ b/src/sass/site/layout/_content.scss
@@ -1,7 +1,7 @@
 .site-content {
     transition: all 0.8s cubic-bezier(0.68, 0, 0.29, 1);
     position: relative;
-    z-index: 2;
+    z-index: 1;
     background: white;
     overflow: hidden;
     a {
