--- a/src/sass/site/layout/_header.scss
+++ b/src/sass/site/layout/_header.scss
@@ -6,7 +6,7 @@ header#masthead{
         position: relative;
     }
     &.panel-fixed {
-        z-index: 3;
+        z-index: 2;
         position: fixed;
         width: 100%;
         top: 0px;
